--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,9 @@ plugins {
     id 'kotlin-kapt'
     id 'dagger.hilt.android.plugin'
     id 'jacoco'
+    id 'com.google.gms.google-services'
+    id 'com.google.firebase.crashlytics'
+
 }
 
 tasks.whenTaskAdded { task ->
@@ -92,8 +95,8 @@ android {
         applicationId "net.francescogatto.greenpassapp"
         minSdkVersion Config.minSdk
         targetSdkVersion Config.targetSdk
-        versionCode 16
-        versionName "1.0"
+        versionCode 20
+        versionName "1.4"
         testInstrumentationRunner Config.androidTestInstrumentation
     }
 
@@ -115,8 +118,16 @@ android {
     }
 
     compileOptions {
+        coreLibraryDesugaringEnabled true
         sourceCompatibility Config.javaVersion
         targetCompatibility Config.javaVersion
+
+    }
+
+    lintOptions {
+        checkReleaseBuilds false
+        abortOnError false
+        disable 'RestrictedApi'
     }
 
     kotlinOptions {
@@ -136,10 +147,10 @@ android {
     }
 
     applicationVariants.all { variant ->
-        variant.outputs.each { output ->
+       /* variant.outputs.each { output ->
             def lintTask = tasks["lint${variant.name.capitalize()}"]
             output.assemble.dependsOn lintTask
-        }
+        }*/
     }
 }
 
@@ -156,7 +167,8 @@ dependencies {
     implementation Deps.androidx_room_runtime
     implementation Deps.androidx_worker_ktx
     implementation Deps.kotlinx_coroutines
-    implementation Deps.zxing
+    implementation('com.journeyapps:zxing-android-embedded:4.2.0') { transitive = false }
+    implementation 'com.google.zxing:core:3.3.0'
     implementation Deps.guava_conflict_resolver
 
     implementation Deps.hilt
@@ -172,12 +184,23 @@ dependencies {
     implementation Deps.retrofit2
     implementation Deps.gson_converter
     implementation 'com.nambimobile.widgets:expandable-fab:1.1.1'
+    implementation platform('com.google.firebase:firebase-bom:28.4.0')
+    implementation 'com.google.firebase:firebase-crashlytics-ktx'
+    implementation 'com.google.firebase:firebase-inappmessaging-display-ktx'
+    implementation 'com.google.firebase:firebase-analytics'
+    implementation 'com.google.firebase:firebase-messaging-ktx'
 
     implementation(platform("com.squareup.okhttp3:okhttp-bom:4.9.1"))
-
     // define any required OkHttp artifacts without version
     implementation("com.squareup.okhttp3:okhttp")
     implementation("com.squareup.okhttp3:logging-interceptor")
+    implementation 'com.google.android.play:core:1.10.0'
+    implementation 'com.google.android.play:core-ktx:1.8.1'
+    implementation 'com.github.javiersantos:AppUpdater:2.7'
+    implementation 'com.github.jrvansuita:MaterialAbout:0.2.3'
+    implementation "androidx.fragment:fragment-ktx:1.3.6"
+
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.5'
 
     testImplementation Deps.test_junit
     testImplementation "io.mockk:mockk:1.11.0"
